Fix helper text alignment in FavoriteName

--- a/map/src/infoblock/components/favorite/wptEditPanel.module.css
+++ b/map/src/infoblock/components/favorite/wptEditPanel.module.css
@@ -19,7 +19,8 @@
 .helperText {
     height: 16px;
     line-height: 16px;
-    margin: 2px 0 0;
+    margin: 0 !important;
+    transform: translateY(-1px);
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
